re-factoring pawn related impact rules